Extiendo el panel lateral

--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -87,13 +87,15 @@ iconSize=48
 launchersGroup=Layout
 lockedZoomApplets=70
 middleClickAction=ToggleMinimized
-panelPosition=Top
+panelPosition=10
 panelSize=100
 panelTransparency=75
 shadowOpacity=50
 shadowSize=30
 shadows=All
 showGlow=true
+splitterPosition=2
+splitterPosition2=3
 threeColorsWindows=true
 zoomLevel=0
 
@@ -209,7 +211,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][13][Applets][40][Configuration]
-PreloadWeight=22
+PreloadWeight=19
 SystrayContainmentId=18
 
 [Containments][13][Applets][41]
@@ -247,7 +249,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][13][Applets][43][Configuration]
-PreloadWeight=17
+PreloadWeight=24
 
 [Containments][13][Applets][43][Configuration][Appearance]
 enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
@@ -417,7 +419,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][25][Configuration]
-PreloadWeight=17
+PreloadWeight=24
 
 [Containments][4][Applets][25][Configuration][Appearance]
 enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
