--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -22,7 +22,7 @@ immutability=1
 plugin=org.kde.latte.plasmoid
 
 [Containments][1][Applets][2][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
@@ -34,14 +34,14 @@ immutability=1
 plugin=org.kde.plasma.trash
 
 [Containments][1][Applets][67][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][1][Applets][68]
 immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][68][Configuration]
-PreloadWeight=73
+PreloadWeight=46
 
 [Containments][1][Applets][68][Configuration][ConfigDialog]
 DialogHeight=480
@@ -58,14 +58,14 @@ immutability=1
 plugin=org.kde.plasma.showdesktop
 
 [Containments][1][Applets][69][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][1][Applets][70]
 immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][1][Applets][70][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][1][Applets][70][Configuration][ConfigDialog]
 DialogHeight=480
@@ -76,7 +76,7 @@ DialogHeight=561
 DialogWidth=450
 
 [Containments][1][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][1][General]
 advanced=true
@@ -113,35 +113,35 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][11][Applets][12][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][11][Applets][14]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][11][Applets][14][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][11][Applets][15]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][11][Applets][15][Configuration]
-PreloadWeight=2
+PreloadWeight=11
 
 [Containments][11][Applets][16]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][11][Applets][16][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][11][Applets][17]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
 [Containments][11][Applets][17][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][11][Applets][21]
 immutability=1
@@ -155,35 +155,28 @@ immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][11][Applets][22][Configuration]
-PreloadWeight=12
+PreloadWeight=10
 
 [Containments][11][Applets][58]
 immutability=1
 plugin=org.kde.discovernotifier
 
 [Containments][11][Applets][58][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][11][Applets][71]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][11][Applets][71][Configuration]
-PreloadWeight=34
-
-[Containments][11][Applets][72]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][11][Applets][72][Configuration]
-PreloadWeight=42
+PreloadWeight=7
 
 [Containments][11][ConfigDialog]
 DialogHeight=480
 DialogWidth=640
 
 [Containments][11][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][11][General]
 extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
@@ -211,7 +204,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][13][Applets][40][Configuration]
-PreloadWeight=19
+PreloadWeight=5
 SystrayContainmentId=18
 
 [Containments][13][Applets][41]
@@ -219,7 +212,7 @@ immutability=1
 plugin=org.kde.activeWindowControl
 
 [Containments][13][Applets][41][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][13][Applets][41][Configuration][Appearance]
 buttonOrder=close|minimize|maximize|alldesktops
@@ -242,14 +235,14 @@ immutability=1
 plugin=org.kde.plasma.appmenu
 
 [Containments][13][Applets][42][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][13][Applets][43]
 immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][13][Applets][43][Configuration]
-PreloadWeight=24
+PreloadWeight=0
 
 [Containments][13][Applets][43][Configuration][Appearance]
 enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
@@ -266,7 +259,7 @@ immutability=1
 plugin=org.kde.plasma.lock_logout
 
 [Containments][13][Applets][44][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][13][Applets][44][Configuration][ConfigDialog]
 DialogHeight=480
@@ -280,7 +273,7 @@ DialogHeight=561
 DialogWidth=450
 
 [Containments][13][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][13][General]
 advanced=true
@@ -313,63 +306,56 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][18][Applets][45][Configuration]
-PreloadWeight=2
-
-[Containments][18][Applets][46]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][18][Applets][46][Configuration]
-PreloadWeight=42
+PreloadWeight=0
 
 [Containments][18][Applets][47]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
 [Containments][18][Applets][47][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][18][Applets][48]
 immutability=1
 plugin=org.kde.discovernotifier
 
 [Containments][18][Applets][48][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][18][Applets][49]
 immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][18][Applets][49][Configuration]
-PreloadWeight=12
+PreloadWeight=4
 
 [Containments][18][Applets][50]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][18][Applets][50][Configuration]
-PreloadWeight=34
+PreloadWeight=2
 
 [Containments][18][Applets][51]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][18][Applets][51][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][18][Applets][52]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][18][Applets][52][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][18][Applets][53]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][18][Applets][53][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][18][Applets][54]
 immutability=1
@@ -383,7 +369,7 @@ DialogHeight=480
 DialogWidth=640
 
 [Containments][18][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][18][General]
 extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
@@ -411,7 +397,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][10][Configuration]
-PreloadWeight=22
+PreloadWeight=60
 SystrayContainmentId=11
 
 [Containments][4][Applets][25]
@@ -419,7 +405,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][25][Configuration]
-PreloadWeight=24
+PreloadWeight=5
 
 [Containments][4][Applets][25][Configuration][Appearance]
 enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
@@ -431,28 +417,12 @@ use24hFormat=2
 DialogHeight=480
 DialogWidth=640
 
-[Containments][4][Applets][62][Configuration][Appearance]
-buttonOrder=close|minimize|maximize|alldesktops
-buttonSize=0.9
-buttonsStandalone=true
-buttonsVerticalCenter=true
-controlButtonsSpacing=0
-horizontalScreenWidthPercent=0.151
-showButtonOnlyWhenMaximized=true
-showMaximize=true
-showMinimize=true
-slidingIconAndText=true
-useWindowTitleReplace=true
-
-[Containments][4][Applets][62][Configuration][Behaviour]
-showForCurrentScreenOnly=true
-
 [Containments][4][Applets][63]
 immutability=1
 plugin=org.kde.plasma.lock_logout
 
 [Containments][4][Applets][63][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][4][Applets][63][Configuration][ConfigDialog]
 DialogHeight=480
@@ -466,11 +436,7 @@ immutability=1
 plugin=org.kde.plasma.appmenu
 
 [Containments][4][Applets][64][Configuration]
-PreloadWeight=18
-
-[Containments][4][Applets][73]
-immutability=1
-plugin=org.kde.activeWindowControl
+PreloadWeight=0
 
 [Containments][4][Applets][73][Configuration][Appearance]
 buttonOrder=close|minimize|maximize|alldesktops
@@ -482,12 +448,35 @@ horizontalScreenWidthPercent=0.166
 showButtonOnlyWhenMaximized=true
 showMaximize=true
 showMinimize=true
+slidingIconAndText=true
 useWindowTitleReplace=true
 
 [Containments][4][Applets][73][Configuration][Behaviour]
 showForCurrentScreenOnly=true
 
-[Containments][4][Applets][73][Configuration][ConfigDialog]
+[Containments][4][Applets][74]
+immutability=1
+plugin=org.kde.activeWindowControl
+
+[Containments][4][Applets][74][Configuration][Appearance]
+buttonOrder=close|minimize|maximize|alldesktops
+buttonSize=0.9
+buttonsStandalone=true
+buttonsVerticalCenter=true
+controlButtonsSpacing=0
+doNotHideControlButtons=true
+horizontalScreenWidthPercent=0.186
+limitTextWidth=true
+showButtonOnlyWhenMaximized=true
+showMaximize=true
+showMinimize=true
+slidingIconAndText=true
+useWindowTitleReplace=true
+
+[Containments][4][Applets][74][Configuration][Behaviour]
+showForCurrentScreenOnly=true
+
+[Containments][4][Applets][74][Configuration][ConfigDialog]
 DialogHeight=774
 DialogWidth=1280
 
@@ -496,11 +485,11 @@ DialogHeight=561
 DialogWidth=450
 
 [Containments][4][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][4][General]
 advanced=true
-appletOrder=73;64;10;25;63
+appletOrder=74;64;10;25;63
 disablePanelShadowForMaximized=true
 durationTime=None
 iconSize=26
