--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -220,11 +220,12 @@ buttonSize=0.9
 buttonsStandalone=true
 buttonsVerticalCenter=true
 controlButtonsSpacing=0
-horizontalScreenWidthPercent=0.151
+horizontalScreenWidthPercent=0.15
 showButtonOnlyWhenMaximized=true
 showMaximize=true
 showMinimize=true
 slidingIconAndText=true
+widthFineTuning=0.5
 
 [Containments][13][Applets][41][Configuration][ConfigDialog]
 DialogHeight=774
@@ -465,7 +466,7 @@ buttonsStandalone=true
 buttonsVerticalCenter=true
 controlButtonsSpacing=0
 doNotHideControlButtons=true
-horizontalScreenWidthPercent=0.186
+horizontalScreenWidthPercent=0.18
 limitTextWidth=true
 showButtonOnlyWhenMaximized=true
 showMaximize=true
