--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -99,90 +99,6 @@ splitterPosition2=3
 threeColorsWindows=true
 zoomLevel=0
 
-[Containments][11]
-activityId=
-formfactor=2
-immutability=1
-lastScreen=-1
-location=3
-plugin=org.kde.plasma.private.systemtray
-wallpaperplugin=org.kde.image
-
-[Containments][11][Applets][12]
-immutability=1
-plugin=org.kde.kdeconnect
-
-[Containments][11][Applets][12][Configuration]
-PreloadWeight=0
-
-[Containments][11][Applets][14]
-immutability=1
-plugin=org.kde.plasma.volume
-
-[Containments][11][Applets][14][Configuration]
-PreloadWeight=0
-
-[Containments][11][Applets][15]
-immutability=1
-plugin=org.kde.plasma.devicenotifier
-
-[Containments][11][Applets][15][Configuration]
-PreloadWeight=11
-
-[Containments][11][Applets][16]
-immutability=1
-plugin=org.kde.plasma.notifications
-
-[Containments][11][Applets][16][Configuration]
-PreloadWeight=0
-
-[Containments][11][Applets][17]
-immutability=1
-plugin=org.kde.plasma.printmanager
-
-[Containments][11][Applets][17][Configuration]
-PreloadWeight=0
-
-[Containments][11][Applets][21]
-immutability=1
-plugin=org.kde.plasma.networkmanagement
-
-[Containments][11][Applets][21][Configuration]
-PreloadWeight=0
-
-[Containments][11][Applets][22]
-immutability=1
-plugin=org.kde.plasma.bluetooth
-
-[Containments][11][Applets][22][Configuration]
-PreloadWeight=10
-
-[Containments][11][Applets][58]
-immutability=1
-plugin=org.kde.discovernotifier
-
-[Containments][11][Applets][58][Configuration]
-PreloadWeight=0
-
-[Containments][11][Applets][71]
-immutability=1
-plugin=org.kde.plasma.battery
-
-[Containments][11][Applets][71][Configuration]
-PreloadWeight=7
-
-[Containments][11][ConfigDialog]
-DialogHeight=480
-DialogWidth=640
-
-[Containments][11][Configuration]
-PreloadWeight=0
-
-[Containments][11][General]
-extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
-knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
-shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
-
 [Containments][13]
 activityId=
 dockWindowBehavior=true
@@ -377,12 +293,12 @@ extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.
 knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
 shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
 
-[Containments][4]
+[Containments][19]
 activityId=
 dockWindowBehavior=true
 formfactor=2
 immutability=1
-lastScreen=-1
+lastScreen=10
 location=3
 onPrimary=false
 plugin=org.kde.latte.containment
@@ -393,51 +309,192 @@ timerShow=200
 visibility=0
 wallpaperplugin=org.kde.image
 
-[Containments][4][Applets][10]
-immutability=1
-plugin=org.kde.plasma.systemtray
-
-[Containments][4][Applets][10][Configuration]
-PreloadWeight=60
-SystrayContainmentId=11
-
-[Containments][4][Applets][25]
+[Containments][19][Applets][46]
 immutability=1
 plugin=org.kde.plasma.digitalclock
 
-[Containments][4][Applets][25][Configuration]
-PreloadWeight=5
+[Containments][19][Applets][46][Configuration]
+PreloadWeight=15
 
-[Containments][4][Applets][25][Configuration][Appearance]
+[Containments][19][Applets][46][Configuration][Appearance]
 enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
 showDate=true
 showWeekNumbers=true
 use24hFormat=2
 
-[Containments][4][Applets][25][Configuration][ConfigDialog]
+[Containments][19][Applets][46][Configuration][ConfigDialog]
 DialogHeight=480
 DialogWidth=640
 
-[Containments][4][Applets][63]
+[Containments][19][Applets][55]
 immutability=1
 plugin=org.kde.plasma.lock_logout
 
-[Containments][4][Applets][63][Configuration]
+[Containments][19][Applets][55][Configuration]
 PreloadWeight=2
 
-[Containments][4][Applets][63][Configuration][ConfigDialog]
+[Containments][19][Applets][55][Configuration][ConfigDialog]
 DialogHeight=480
 DialogWidth=640
 
-[Containments][4][Applets][63][Configuration][General]
+[Containments][19][Applets][55][Configuration][General]
 show_lockScreen=false
 
-[Containments][4][Applets][64]
+[Containments][19][Applets][56]
+immutability=1
+plugin=org.kde.plasma.systemtray
+
+[Containments][19][Applets][56][Configuration]
+PreloadWeight=60
+SystrayContainmentId=20
+
+[Containments][19][Applets][57]
+immutability=1
+plugin=org.kde.activeWindowControl
+
+[Containments][19][Applets][57][Configuration][Appearance]
+buttonOrder=close|minimize|maximize|alldesktops
+buttonSize=0.9
+buttonsStandalone=true
+buttonsVerticalCenter=true
+controlButtonsSpacing=0
+doNotHideControlButtons=true
+horizontalScreenWidthPercent=0.17600000000000002
+limitTextWidth=true
+showButtonOnlyWhenMaximized=true
+showMaximize=true
+showMinimize=true
+slidingIconAndText=true
+useWindowTitleReplace=true
+
+[Containments][19][Applets][57][Configuration][Behaviour]
+showForCurrentScreenOnly=true
+
+[Containments][19][Applets][57][Configuration][ConfigDialog]
+DialogHeight=751
+DialogWidth=1280
+
+[Containments][19][Applets][60]
 immutability=1
 plugin=org.kde.plasma.appmenu
 
-[Containments][4][Applets][64][Configuration]
+[Containments][19][Applets][60][Configuration]
 PreloadWeight=0
+
+[Containments][19][ConfigDialog]
+DialogHeight=561
+DialogWidth=450
+
+[Containments][19][Configuration]
+PreloadWeight=0
+
+[Containments][19][General]
+advanced=true
+appletOrder=57;60;56;46;55
+disablePanelShadowForMaximized=true
+durationTime=None
+iconSize=26
+panelPosition=10
+panelSize=100
+shadowColor=ececec
+shadowOpacity=10
+shadowSize=5
+shrinkThickMargins=true
+splitterPosition=2
+splitterPosition2=3
+titleTooltips=true
+zoomLevel=0
+
+[Containments][20]
+activityId=
+formfactor=2
+immutability=1
+lastScreen=-1
+location=3
+plugin=org.kde.plasma.private.systemtray
+wallpaperplugin=org.kde.image
+
+[Containments][20][Applets][61]
+immutability=1
+plugin=org.kde.plasma.volume
+
+[Containments][20][Applets][61][Configuration]
+PreloadWeight=0
+
+[Containments][20][Applets][62]
+immutability=1
+plugin=org.kde.plasma.networkmanagement
+
+[Containments][20][Applets][62][Configuration]
+PreloadWeight=0
+
+[Containments][20][Applets][65]
+immutability=1
+plugin=org.kde.plasma.devicenotifier
+
+[Containments][20][Applets][65][Configuration]
+PreloadWeight=11
+
+[Containments][20][Applets][66]
+immutability=1
+plugin=org.kde.kdeconnect
+
+[Containments][20][Applets][66][Configuration]
+PreloadWeight=0
+
+[Containments][20][Applets][72]
+immutability=1
+plugin=org.kde.plasma.bluetooth
+
+[Containments][20][Applets][72][Configuration]
+PreloadWeight=10
+
+[Containments][20][Applets][77]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][20][Applets][77][Configuration]
+PreloadWeight=42
+
+[Containments][20][Applets][78]
+immutability=1
+plugin=org.kde.discovernotifier
+
+[Containments][20][Applets][78][Configuration]
+PreloadWeight=0
+
+[Containments][20][Applets][79]
+immutability=1
+plugin=org.kde.plasma.battery
+
+[Containments][20][Applets][79][Configuration]
+PreloadWeight=7
+
+[Containments][20][Applets][80]
+immutability=1
+plugin=org.kde.plasma.notifications
+
+[Containments][20][Applets][80][Configuration]
+PreloadWeight=0
+
+[Containments][20][Applets][81]
+immutability=1
+plugin=org.kde.plasma.printmanager
+
+[Containments][20][Applets][81][Configuration]
+PreloadWeight=0
+
+[Containments][20][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][20][Configuration]
+PreloadWeight=0
+
+[Containments][20][General]
+extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
+knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
+shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
 
 [Containments][4][Applets][73][Configuration][Appearance]
 buttonOrder=close|minimize|maximize|alldesktops
@@ -454,56 +511,6 @@ useWindowTitleReplace=true
 
 [Containments][4][Applets][73][Configuration][Behaviour]
 showForCurrentScreenOnly=true
-
-[Containments][4][Applets][74]
-immutability=1
-plugin=org.kde.activeWindowControl
-
-[Containments][4][Applets][74][Configuration][Appearance]
-buttonOrder=close|minimize|maximize|alldesktops
-buttonSize=0.9
-buttonsStandalone=true
-buttonsVerticalCenter=true
-controlButtonsSpacing=0
-doNotHideControlButtons=true
-horizontalScreenWidthPercent=0.18
-limitTextWidth=true
-showButtonOnlyWhenMaximized=true
-showMaximize=true
-showMinimize=true
-slidingIconAndText=true
-useWindowTitleReplace=true
-
-[Containments][4][Applets][74][Configuration][Behaviour]
-showForCurrentScreenOnly=true
-
-[Containments][4][Applets][74][Configuration][ConfigDialog]
-DialogHeight=774
-DialogWidth=1280
-
-[Containments][4][ConfigDialog]
-DialogHeight=561
-DialogWidth=450
-
-[Containments][4][Configuration]
-PreloadWeight=0
-
-[Containments][4][General]
-advanced=true
-appletOrder=74;64;10;25;63
-disablePanelShadowForMaximized=true
-durationTime=None
-iconSize=26
-panelPosition=10
-panelSize=100
-shadowColor=ececec
-shadowOpacity=10
-shadowSize=5
-shrinkThickMargins=true
-splitterPosition=2
-splitterPosition2=3
-titleTooltips=true
-zoomLevel=0
 
 [Containments1Appletsts][8][Configuration][General]
 favorites=preferred://browser,systemsettings.desktop,org.kde.dolphin.desktop,org.kde.kate.desktop,org.kde.discover.desktop
