--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -41,7 +41,7 @@ immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][68][Configuration]
-PreloadWeight=46
+PreloadWeight=38
 
 [Containments][1][Applets][68][Configuration][ConfigDialog]
 DialogHeight=480
@@ -99,6 +99,121 @@ splitterPosition2=3
 threeColorsWindows=true
 zoomLevel=0
 
+[Containments][12]
+activityId=
+dockWindowBehavior=true
+formfactor=2
+immutability=1
+lastScreen=10
+location=3
+onPrimary=false
+plugin=org.kde.latte.containment
+raiseOnActivityChange=false
+raiseOnDesktopChange=false
+timerHide=700
+timerShow=200
+visibility=0
+wallpaperplugin=org.kde.image
+
+[Containments][12][Applets][58]
+immutability=1
+plugin=org.kde.activeWindowControl
+
+[Containments][12][Applets][58][Configuration]
+PreloadWeight=0
+
+[Containments][12][Applets][58][Configuration][Appearance]
+boldFontWeight=true
+buttonOrder=close|minimize|maximize|alldesktops
+buttonSize=0.9
+buttonsStandalone=true
+buttonsVerticalCenter=true
+controlButtonsSpacing=0
+horizontalScreenWidthPercent=0.15
+showButtonOnlyWhenMaximized=true
+showMaximize=true
+showMinimize=true
+slidingIconAndText=true
+widthFineTuning=0.5
+
+[Containments][12][Applets][58][Configuration][Behaviour]
+showForCurrentScreenOnly=true
+
+[Containments][12][Applets][58][Configuration][ConfigDialog]
+DialogHeight=774
+DialogWidth=1280
+
+[Containments][12][Applets][59]
+immutability=1
+plugin=org.kde.plasma.systemtray
+
+[Containments][12][Applets][59][Configuration]
+PreloadWeight=100
+SystrayContainmentId=14
+
+[Containments][12][Applets][63]
+immutability=1
+plugin=org.kde.plasma.digitalclock
+
+[Containments][12][Applets][63][Configuration]
+PreloadWeight=0
+
+[Containments][12][Applets][63][Configuration][Appearance]
+boldText=true
+enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
+showDate=true
+showWeekNumbers=true
+use24hFormat=2
+
+[Containments][12][Applets][63][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][12][Applets][64]
+immutability=1
+plugin=org.kde.plasma.appmenu
+
+[Containments][12][Applets][64][Configuration]
+PreloadWeight=0
+
+[Containments][12][Applets][71]
+immutability=1
+plugin=org.kde.plasma.lock_logout
+
+[Containments][12][Applets][71][Configuration]
+PreloadWeight=0
+
+[Containments][12][Applets][71][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][12][Applets][71][Configuration][General]
+show_lockScreen=false
+
+[Containments][12][ConfigDialog]
+DialogHeight=561
+DialogWidth=450
+
+[Containments][12][Configuration]
+PreloadWeight=0
+
+[Containments][12][General]
+advanced=true
+appletOrder=58;64;59;63;71
+disablePanelShadowForMaximized=true
+durationTime=None
+iconSize=26
+panelPosition=10
+panelSize=100
+shadowColor=ececec
+shadowOpacity=10
+shadowSize=5
+shrinkThickMargins=true
+splitterPosition=2
+splitterPosition2=3
+titleTooltips=true
+zoomLevel=0
+
 [Containments][13]
 activityId=
 dockWindowBehavior=true
@@ -120,7 +235,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][13][Applets][40][Configuration]
-PreloadWeight=5
+PreloadWeight=15
 SystrayContainmentId=18
 
 [Containments][13][Applets][41]
@@ -128,7 +243,7 @@ immutability=1
 plugin=org.kde.activeWindowControl
 
 [Containments][13][Applets][41][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][13][Applets][41][Configuration][Appearance]
 buttonOrder=close|minimize|maximize|alldesktops
@@ -142,6 +257,9 @@ showMaximize=true
 showMinimize=true
 slidingIconAndText=true
 widthFineTuning=0.5
+
+[Containments][13][Applets][41][Configuration][Behaviour]
+showForCurrentScreenOnly=true
 
 [Containments][13][Applets][41][Configuration][ConfigDialog]
 DialogHeight=774
@@ -176,7 +294,7 @@ immutability=1
 plugin=org.kde.plasma.lock_logout
 
 [Containments][13][Applets][44][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][13][Applets][44][Configuration][ConfigDialog]
 DialogHeight=480
@@ -194,7 +312,7 @@ PreloadWeight=0
 
 [Containments][13][General]
 advanced=true
-appletOrder=41;42;40;43;44
+appletOrder=41;42;43
 disablePanelShadowForMaximized=true
 durationTime=None
 iconSize=26
@@ -208,6 +326,101 @@ splitterPosition=2
 splitterPosition2=3
 titleTooltips=true
 zoomLevel=0
+
+[Containments][14]
+activityId=
+formfactor=2
+immutability=1
+lastScreen=11
+location=3
+plugin=org.kde.plasma.private.systemtray
+wallpaperplugin=org.kde.image
+
+[Containments][14][Applets][74]
+immutability=1
+plugin=org.kde.kdeconnect
+
+[Containments][14][Applets][74][Configuration]
+PreloadWeight=0
+
+[Containments][14][Applets][75]
+immutability=1
+plugin=org.kde.plasma.networkmanagement
+
+[Containments][14][Applets][75][Configuration]
+PreloadWeight=0
+
+[Containments][14][Applets][76]
+immutability=1
+plugin=org.kde.plasma.notifications
+
+[Containments][14][Applets][76][Configuration]
+PreloadWeight=0
+
+[Containments][14][Applets][77]
+immutability=1
+plugin=org.kde.plasma.battery
+
+[Containments][14][Applets][77][Configuration]
+PreloadWeight=0
+
+[Containments][14][Applets][82]
+immutability=1
+plugin=org.kde.plasma.volume
+
+[Containments][14][Applets][82][Configuration]
+PreloadWeight=80
+
+[Containments][14][Applets][82][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][14][Applets][83]
+immutability=1
+plugin=org.kde.plasma.devicenotifier
+
+[Containments][14][Applets][83][Configuration]
+PreloadWeight=20
+
+[Containments][14][Applets][84]
+immutability=1
+plugin=org.kde.discovernotifier
+
+[Containments][14][Applets][84][Configuration]
+PreloadWeight=0
+
+[Containments][14][Applets][85]
+immutability=1
+plugin=org.kde.plasma.printmanager
+
+[Containments][14][Applets][85][Configuration]
+PreloadWeight=0
+
+[Containments][14][Applets][86]
+immutability=1
+plugin=org.kde.plasma.bluetooth
+
+[Containments][14][Applets][86][Configuration]
+PreloadWeight=5
+
+[Containments][14][Applets][88]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][14][Applets][88][Configuration]
+PreloadWeight=18
+
+[Containments][14][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][14][Configuration]
+PreloadWeight=0
+
+[Containments][14][General]
+extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
+knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
+shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
 
 [Containments][18]
 activityId=
@@ -244,14 +457,14 @@ immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][18][Applets][49][Configuration]
-PreloadWeight=4
+PreloadWeight=0
 
 [Containments][18][Applets][50]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][18][Applets][50][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][18][Applets][51]
 immutability=1
@@ -265,7 +478,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][18][Applets][52][Configuration]
-PreloadWeight=0
+PreloadWeight=15
 
 [Containments][18][Applets][53]
 immutability=1
@@ -281,6 +494,13 @@ plugin=org.kde.plasma.networkmanagement
 [Containments][18][Applets][54][Configuration]
 PreloadWeight=0
 
+[Containments][18][Applets][87]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][18][Applets][87][Configuration]
+PreloadWeight=18
+
 [Containments][18][ConfigDialog]
 DialogHeight=480
 DialogWidth=640
@@ -289,209 +509,6 @@ DialogWidth=640
 PreloadWeight=0
 
 [Containments][18][General]
-extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
-knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
-shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
-
-[Containments][19]
-activityId=
-dockWindowBehavior=true
-formfactor=2
-immutability=1
-lastScreen=10
-location=3
-onPrimary=false
-plugin=org.kde.latte.containment
-raiseOnActivityChange=false
-raiseOnDesktopChange=false
-timerHide=700
-timerShow=200
-visibility=0
-wallpaperplugin=org.kde.image
-
-[Containments][19][Applets][46]
-immutability=1
-plugin=org.kde.plasma.digitalclock
-
-[Containments][19][Applets][46][Configuration]
-PreloadWeight=15
-
-[Containments][19][Applets][46][Configuration][Appearance]
-enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
-showDate=true
-showWeekNumbers=true
-use24hFormat=2
-
-[Containments][19][Applets][46][Configuration][ConfigDialog]
-DialogHeight=480
-DialogWidth=640
-
-[Containments][19][Applets][55]
-immutability=1
-plugin=org.kde.plasma.lock_logout
-
-[Containments][19][Applets][55][Configuration]
-PreloadWeight=2
-
-[Containments][19][Applets][55][Configuration][ConfigDialog]
-DialogHeight=480
-DialogWidth=640
-
-[Containments][19][Applets][55][Configuration][General]
-show_lockScreen=false
-
-[Containments][19][Applets][56]
-immutability=1
-plugin=org.kde.plasma.systemtray
-
-[Containments][19][Applets][56][Configuration]
-PreloadWeight=60
-SystrayContainmentId=20
-
-[Containments][19][Applets][57]
-immutability=1
-plugin=org.kde.activeWindowControl
-
-[Containments][19][Applets][57][Configuration][Appearance]
-buttonOrder=close|minimize|maximize|alldesktops
-buttonSize=0.9
-buttonsStandalone=true
-buttonsVerticalCenter=true
-controlButtonsSpacing=0
-doNotHideControlButtons=true
-horizontalScreenWidthPercent=0.17600000000000002
-limitTextWidth=true
-showButtonOnlyWhenMaximized=true
-showMaximize=true
-showMinimize=true
-slidingIconAndText=true
-useWindowTitleReplace=true
-
-[Containments][19][Applets][57][Configuration][Behaviour]
-showForCurrentScreenOnly=true
-
-[Containments][19][Applets][57][Configuration][ConfigDialog]
-DialogHeight=751
-DialogWidth=1280
-
-[Containments][19][Applets][60]
-immutability=1
-plugin=org.kde.plasma.appmenu
-
-[Containments][19][Applets][60][Configuration]
-PreloadWeight=0
-
-[Containments][19][ConfigDialog]
-DialogHeight=561
-DialogWidth=450
-
-[Containments][19][Configuration]
-PreloadWeight=0
-
-[Containments][19][General]
-advanced=true
-appletOrder=57;60;56;46;55
-disablePanelShadowForMaximized=true
-durationTime=None
-iconSize=26
-panelPosition=10
-panelSize=100
-shadowColor=ececec
-shadowOpacity=10
-shadowSize=5
-shrinkThickMargins=true
-splitterPosition=2
-splitterPosition2=3
-titleTooltips=true
-zoomLevel=0
-
-[Containments][20]
-activityId=
-formfactor=2
-immutability=1
-lastScreen=-1
-location=3
-plugin=org.kde.plasma.private.systemtray
-wallpaperplugin=org.kde.image
-
-[Containments][20][Applets][61]
-immutability=1
-plugin=org.kde.plasma.volume
-
-[Containments][20][Applets][61][Configuration]
-PreloadWeight=0
-
-[Containments][20][Applets][62]
-immutability=1
-plugin=org.kde.plasma.networkmanagement
-
-[Containments][20][Applets][62][Configuration]
-PreloadWeight=0
-
-[Containments][20][Applets][65]
-immutability=1
-plugin=org.kde.plasma.devicenotifier
-
-[Containments][20][Applets][65][Configuration]
-PreloadWeight=11
-
-[Containments][20][Applets][66]
-immutability=1
-plugin=org.kde.kdeconnect
-
-[Containments][20][Applets][66][Configuration]
-PreloadWeight=0
-
-[Containments][20][Applets][72]
-immutability=1
-plugin=org.kde.plasma.bluetooth
-
-[Containments][20][Applets][72][Configuration]
-PreloadWeight=10
-
-[Containments][20][Applets][77]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][20][Applets][77][Configuration]
-PreloadWeight=42
-
-[Containments][20][Applets][78]
-immutability=1
-plugin=org.kde.discovernotifier
-
-[Containments][20][Applets][78][Configuration]
-PreloadWeight=0
-
-[Containments][20][Applets][79]
-immutability=1
-plugin=org.kde.plasma.battery
-
-[Containments][20][Applets][79][Configuration]
-PreloadWeight=7
-
-[Containments][20][Applets][80]
-immutability=1
-plugin=org.kde.plasma.notifications
-
-[Containments][20][Applets][80][Configuration]
-PreloadWeight=0
-
-[Containments][20][Applets][81]
-immutability=1
-plugin=org.kde.plasma.printmanager
-
-[Containments][20][Applets][81][Configuration]
-PreloadWeight=0
-
-[Containments][20][ConfigDialog]
-DialogHeight=480
-DialogWidth=640
-
-[Containments][20][Configuration]
-PreloadWeight=0
-
-[Containments][20][General]
 extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
 knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
 shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
