--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -110,8 +110,8 @@ onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
-timerHide=700
-timerShow=200
+timerHide=1500
+timerShow=500
 visibility=0
 wallpaperplugin=org.kde.image
 
@@ -130,6 +130,7 @@ buttonsStandalone=true
 buttonsVerticalCenter=true
 controlButtonsSpacing=0
 horizontalScreenWidthPercent=0.15
+noWindowIcon=kde-logo
 showButtonOnlyWhenMaximized=true
 showMaximize=true
 showMinimize=true
@@ -156,7 +157,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][12][Applets][63][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][12][Applets][63][Configuration][Appearance]
 boldText=true
@@ -230,14 +231,6 @@ timerShow=200
 visibility=0
 wallpaperplugin=org.kde.image
 
-[Containments][13][Applets][40]
-immutability=1
-plugin=org.kde.plasma.systemtray
-
-[Containments][13][Applets][40][Configuration]
-PreloadWeight=15
-SystrayContainmentId=18
-
 [Containments][13][Applets][41]
 immutability=1
 plugin=org.kde.activeWindowControl
@@ -252,6 +245,7 @@ buttonsStandalone=true
 buttonsVerticalCenter=true
 controlButtonsSpacing=0
 horizontalScreenWidthPercent=0.15
+noWindowIcon=kde-logo
 showButtonOnlyWhenMaximized=true
 showMaximize=true
 showMinimize=true
@@ -272,33 +266,11 @@ plugin=org.kde.plasma.appmenu
 [Containments][13][Applets][42][Configuration]
 PreloadWeight=0
 
-[Containments][13][Applets][43]
-immutability=1
-plugin=org.kde.plasma.digitalclock
-
-[Containments][13][Applets][43][Configuration]
-PreloadWeight=0
-
 [Containments][13][Applets][43][Configuration][Appearance]
 enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
 showDate=true
 showWeekNumbers=true
 use24hFormat=2
-
-[Containments][13][Applets][43][Configuration][ConfigDialog]
-DialogHeight=480
-DialogWidth=640
-
-[Containments][13][Applets][44]
-immutability=1
-plugin=org.kde.plasma.lock_logout
-
-[Containments][13][Applets][44][Configuration]
-PreloadWeight=0
-
-[Containments][13][Applets][44][Configuration][ConfigDialog]
-DialogHeight=480
-DialogWidth=640
 
 [Containments][13][Applets][44][Configuration][General]
 show_lockScreen=false
@@ -312,7 +284,7 @@ PreloadWeight=0
 
 [Containments][13][General]
 advanced=true
-appletOrder=41;42;43
+appletOrder=41;42
 disablePanelShadowForMaximized=true
 durationTime=None
 iconSize=26
@@ -355,7 +327,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][14][Applets][76][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][14][Applets][77]
 immutability=1
@@ -369,7 +341,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][14][Applets][82][Configuration]
-PreloadWeight=80
+PreloadWeight=95
 
 [Containments][14][Applets][82][Configuration][ConfigDialog]
 DialogHeight=480
@@ -401,14 +373,14 @@ immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][14][Applets][86][Configuration]
-PreloadWeight=5
+PreloadWeight=15
 
 [Containments][14][Applets][88]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][14][Applets][88][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][14][ConfigDialog]
 DialogHeight=480
@@ -421,92 +393,6 @@ PreloadWeight=0
 extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
 knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
 shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
-
-[Containments][18]
-activityId=
-formfactor=2
-immutability=1
-lastScreen=11
-location=3
-plugin=org.kde.plasma.private.systemtray
-wallpaperplugin=org.kde.image
-
-[Containments][18][Applets][45]
-immutability=1
-plugin=org.kde.kdeconnect
-
-[Containments][18][Applets][45][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][47]
-immutability=1
-plugin=org.kde.plasma.printmanager
-
-[Containments][18][Applets][47][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][48]
-immutability=1
-plugin=org.kde.discovernotifier
-
-[Containments][18][Applets][48][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][49]
-immutability=1
-plugin=org.kde.plasma.bluetooth
-
-[Containments][18][Applets][49][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][50]
-immutability=1
-plugin=org.kde.plasma.battery
-
-[Containments][18][Applets][50][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][51]
-immutability=1
-plugin=org.kde.plasma.volume
-
-[Containments][18][Applets][51][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][52]
-immutability=1
-plugin=org.kde.plasma.devicenotifier
-
-[Containments][18][Applets][52][Configuration]
-PreloadWeight=15
-
-[Containments][18][Applets][53]
-immutability=1
-plugin=org.kde.plasma.notifications
-
-[Containments][18][Applets][53][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][54]
-immutability=1
-plugin=org.kde.plasma.networkmanagement
-
-[Containments][18][Applets][54][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][87]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][18][Applets][87][Configuration]
-PreloadWeight=18
-
-[Containments][18][ConfigDialog]
-DialogHeight=480
-DialogWidth=640
-
-[Containments][18][Configuration]
-PreloadWeight=0
 
 [Containments][18][General]
 extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
