Cambia todo cambia

--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -152,7 +152,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][12][Applets][59][Configuration]
-PreloadWeight=84
+PreloadWeight=100
 SystrayContainmentId=14
 
 [Containments][12][Applets][63]
@@ -160,7 +160,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][12][Applets][63][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][12][Applets][63][Configuration][Appearance]
 boldText=true
@@ -332,7 +332,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][14][Applets][82][Configuration]
-PreloadWeight=79
+PreloadWeight=94
 
 [Containments][14][Applets][82][Configuration][ConfigDialog]
 DialogHeight=480
@@ -343,7 +343,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][14][Applets][83][Configuration]
-PreloadWeight=4
+PreloadWeight=34
 
 [Containments][14][Applets][84]
 immutability=1
@@ -364,7 +364,14 @@ immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][14][Applets][86][Configuration]
-PreloadWeight=0
+PreloadWeight=5
+
+[Containments][14][Applets][87]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][14][Applets][87][Configuration]
+PreloadWeight=18
 
 [Containments][14][ConfigDialog]
 DialogHeight=480
